--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Latihan visual code manaagement</title>
 </head>
 <body>
-    Hello world
+    <div>
+        <img src="images/106983076_630954384177826_4417326146391378427_n.jpg" alt="profile image">
+        <h2>Wahyu Safaat</h2>
+    </div>
 </body>
 </html>
