"Added ids for each profile element"

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Latihan visual code manaagement</title>
 </head>
 <body>
-    <div>
-        <img src="images/106983076_630954384177826_4417326146391378427_n.jpg" alt="profile image">
-        <h2>Wahyu Safaat</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/106983076_630954384177826_4417326146391378427_n.jpg" alt="profile image">
+        <h2 id="profile-name"> Wahyu Safaat </h2>
     </div>
 </body>
 </html>
